# Roy-the-Traffic-Cop

./: .gitignore  CMakeLists.txt  Makefile  README - final milestone.txt  README - milestone 1.txt  README - milestone 2.txt  README - milestone 4.txt  README.md  Roy-the-Traffic-Cop
data/meshes/: ambulance.mesh
shaders/: ambulance.fs.glsl  cop.vs.glsl  gameTimer.fs.glsl  gameTimer.vs.glsl  scoreDisplay.vs.glsl  texturedWithHeadlight.fs.glsl  weather.fs.glsl
src/: Roy-the-Traffic-Cop.cpp  ai.cpp  ai.hpp  ambulance.cpp  ambulance.hpp  background.cpp  background.hpp  car.cpp  car.hpp  car_type.hpp  coin.cpp  coin.hpp  common.cpp  common.hpp  direction.hpp  display_screen.cpp  display_screen.hpp  game_timer.cpp  game_timer.hpp  high_scores.cpp  high_scores.hpp  high_scores.txt  lane.cpp  lane.hpp  lane_manager.cpp  lane_manager.hpp  level_manager.cpp  level_manager.hpp  placard.cpp  placard.hpp  remove_intersection.cpp  remove_intersection.hpp  salmon.cpp  salmon.hpp  score_display.cpp  score_display.hpp  traffic_cop.cpp  traffic_cop.hpp  turn_direction.hpp  warning.cpp  (+5 more)
visual_studio/: a1.sln  a1.vcxproj
visual_studio/Debug/x64/: Roy-the-Traffic-Cop.ilk
visual_studio/tmp/Debug/x64/Roy-the-.FECE120D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Roy-the-Traffic-Cop.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
visual_studio/tmp/Debug/x64/a1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  a1.lastbuildstate
