cmake_minimum_required(VERSION 3.9)
project(template)

set(CMAKE_CXX_STANDARD 11)

add_executable(template
        data/audio/music.wav
        data/meshes/salmon.mesh
        ext/gl3w/gl3w.h
        ext/gl3w/glcorearb.h
        ext/glfw/include/GLFW/glfw3.h
        ext/glfw/include/GLFW/glfw3native.h
        ext/sdl/include/SDL/begin_code.h
        ext/sdl/include/SDL/close_code.h
        ext/sdl/include/SDL/SDL.h
        ext/sdl/include/SDL/SDL_assert.h
        ext/sdl/include/SDL/SDL_atomic.h
        ext/sdl/include/SDL/SDL_audio.h
        ext/sdl/include/SDL/SDL_bits.h
        ext/sdl/include/SDL/SDL_blendmode.h
        ext/sdl/include/SDL/SDL_clipboard.h
        ext/sdl/include/SDL/SDL_config.h
        ext/sdl/include/SDL/SDL_config_android.h
        ext/sdl/include/SDL/SDL_config_iphoneos.h
        ext/sdl/include/SDL/SDL_config_macosx.h
        ext/sdl/include/SDL/SDL_config_minimal.h
        ext/sdl/include/SDL/SDL_config_pandora.h
        ext/sdl/include/SDL/SDL_config_psp.h
        ext/sdl/include/SDL/SDL_config_windows.h
        ext/sdl/include/SDL/SDL_config_winrt.h
        ext/sdl/include/SDL/SDL_config_wiz.h
        ext/sdl/include/SDL/SDL_copying.h
        ext/sdl/include/SDL/SDL_cpuinfo.h
        ext/sdl/include/SDL/SDL_egl.h
        ext/sdl/include/SDL/SDL_endian.h
        ext/sdl/include/SDL/SDL_error.h
        ext/sdl/include/SDL/SDL_events.h
        ext/sdl/include/SDL/SDL_filesystem.h
        ext/sdl/include/SDL/SDL_gamecontroller.h
        ext/sdl/include/SDL/SDL_gesture.h
        ext/sdl/include/SDL/SDL_haptic.h
        ext/sdl/include/SDL/SDL_hints.h
        ext/sdl/include/SDL/SDL_joystick.h
        ext/sdl/include/SDL/SDL_keyboard.h
        ext/sdl/include/SDL/SDL_keycode.h
        ext/sdl/include/SDL/SDL_loadso.h
        ext/sdl/include/SDL/SDL_log.h
        ext/sdl/include/SDL/SDL_main.h
        ext/sdl/include/SDL/SDL_messagebox.h
        ext/sdl/include/SDL/SDL_mixer.h
        ext/sdl/include/SDL/SDL_mouse.h
        ext/sdl/include/SDL/SDL_mutex.h
        ext/sdl/include/SDL/SDL_name.h
        ext/sdl/include/SDL/SDL_opengl.h
        ext/sdl/include/SDL/SDL_opengl_glext.h
        ext/sdl/include/SDL/SDL_opengles.h
        ext/sdl/include/SDL/SDL_opengles2.h
        ext/sdl/include/SDL/SDL_opengles2_gl2.h
        ext/sdl/include/SDL/SDL_opengles2_gl2ext.h
        ext/sdl/include/SDL/SDL_opengles2_gl2platform.h
        ext/sdl/include/SDL/SDL_opengles2_khrplatform.h
        ext/sdl/include/SDL/SDL_pixels.h
        ext/sdl/include/SDL/SDL_platform.h
        ext/sdl/include/SDL/SDL_power.h
        ext/sdl/include/SDL/SDL_quit.h
        ext/sdl/include/SDL/SDL_rect.h
        ext/sdl/include/SDL/SDL_render.h
        ext/sdl/include/SDL/SDL_revision.h
        ext/sdl/include/SDL/SDL_rwops.h
        ext/sdl/include/SDL/SDL_scancode.h
        ext/sdl/include/SDL/SDL_shape.h
        ext/sdl/include/SDL/SDL_stdinc.h
        ext/sdl/include/SDL/SDL_surface.h
        ext/sdl/include/SDL/SDL_system.h
        ext/sdl/include/SDL/SDL_syswm.h
        ext/sdl/include/SDL/SDL_test.h
        ext/sdl/include/SDL/SDL_test_assert.h
        ext/sdl/include/SDL/SDL_test_common.h
        ext/sdl/include/SDL/SDL_test_compare.h
        ext/sdl/include/SDL/SDL_test_crc32.h
        ext/sdl/include/SDL/SDL_test_font.h
        ext/sdl/include/SDL/SDL_test_fuzzer.h
        ext/sdl/include/SDL/SDL_test_harness.h
        ext/sdl/include/SDL/SDL_test_images.h
        ext/sdl/include/SDL/SDL_test_log.h
        ext/sdl/include/SDL/SDL_test_md5.h
        ext/sdl/include/SDL/SDL_test_memory.h
        ext/sdl/include/SDL/SDL_test_random.h
        ext/sdl/include/SDL/SDL_thread.h
        ext/sdl/include/SDL/SDL_timer.h
        ext/sdl/include/SDL/SDL_touch.h
        ext/sdl/include/SDL/SDL_types.h
        ext/sdl/include/SDL/SDL_version.h
        ext/sdl/include/SDL/SDL_video.h
        ext/sdl/include/SDL/SDL_vulkan.h
        ext/stb_image/stb_image.h
        shaders/colored.fs.glsl
        shaders/colored.vs.glsl
        shaders/textured.fs.glsl
        shaders/textured.vs.glsl
        src/Roy-the-Traffic-Cop.cpp
        src/common.cpp
        src/common.hpp
        src/salmon.cpp
        src/salmon.hpp
        src/world.cpp
        src/world.hpp
        Makefile)
